# dba-ops-agent

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml
docs/: index.html
src/dba_ops_agent/: __init__.py  collector.py  config.py  events.py  memory.py  models.py  runner.py  scheduler.py
src/dba_ops_agent/cli/: __init__.py  main.py
src/dba_ops_agent/db/: pool.py
src/dba_ops_agent/diagnoser/: __init__.py  rules.py
src/dba_ops_agent/dialect/: __init__.py  gaussdb_pg.py  mysql.py  oracle.py
src/dba_ops_agent/llm_core/: __init__.py  client.py  core.py
src/dba_ops_agent/notifier/: __init__.py  email.py  notifier.py  webhook.py
src/dba_ops_agent/recovery_advisor/: __init__.py  base.py
src/dba_ops_agent/web/: __init__.py  main.py
tests/: conftest.py  test_diagnoser.py  test_dialect.py  test_recovery_advisor.py  test_runner_security.py
